--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <section class="section-content">
 
         <section class="left-image">
-          <img src="IMG/cupcakes.jpeg" alt="A picture of me, a man with brown hair, glasses, and a beard, smiling, in Santa Cruz in December 2018.">
+          <img src="IMG/Jack2018.jpeg" alt="A picture of me, a man with brown hair, glasses, and a beard, smiling, in Santa Cruz in December 2018.">
         </section>
 
         <div class="details">
