CV & pubs updates
Adding HSP acceptances and John Fell Fund grant

--- a/pubs.html
+++ b/pubs.html
@@ -84,6 +84,14 @@
 <h4>Peer-Reviewed Presentations</h4>
 
 <p>
+  Delayed structural prediction for relative clauses in Santiago Laxopa Zapotec, a language with robust resumptive pronouns. Accepted as a talk at the Conference on Human Sentence Processing (HSP) 37, UMich, May 2024. (with Delaney Gomez-Jackson, Fe Silva Robles, Maziar Toosarvandani, and Matthew Wagers)
+</p>
+
+<p>
+  Different structural boundaries have different effects on dependency resolution. Accepted as a poster at the Conference on Human Sentence Processing (HSP) 37, UMich, May 2024. (with Lalitha Balachandran, Pranav Anand, and Amanda Rysling)
+</p>
+
+<p>
   Incremental computation of scalar implicatures in the Maze task. Talk at XPrag X, Paris, September 2023. (with Pranav Anand and Amanda Rysling) (<a href="PDF/Duff_2023_XPrag.pdf" target="_blank">slides</a>)
 </p>
 
@@ -100,7 +108,7 @@
 </p>
 
 <p>
-  Participants seek shared outlooks in non-canonical disagreements: Evidence from a corpus of dyadic conversation in English. Accepted as a long paper at SemDial, Technological University Dublin, August 2022. (with Lalitha Balachandran)
+  Participants seek shared outlooks in non-canonical disagreements: Evidence from a corpus of dyadic conversation in English. Talk at SemDial, Technological University Dublin, August 2022. (with Lalitha Balachandran)
 </p>
 
 <p>
