Adding Oxford and HSP materials

--- a/pubs.html
+++ b/pubs.html
@@ -84,11 +84,15 @@
 <h4>Peer-Reviewed Presentations</h4>
 
 <p>
-  Delayed structural prediction for relative clauses in Santiago Laxopa Zapotec, a language with robust resumptive pronouns. Accepted as a talk at the Conference on Human Sentence Processing (HSP) 37, UMich, May 2024. (with Delaney Gomez-Jackson, Fe Silva Robles, Maziar Toosarvandani, and Matthew Wagers)
+  Modeling individual differences in a pragmatic reference game as a consequence of variable disengagement from unsuccessful strategies. Accepted as a talk in the “Computational Psycholinguistics” symposium at MathPsych/ICCM 2024, Tilburg. (with Alexandra Mayn and Vera Demberg) (<a href="PDF/DuffMaynDemberg_2024_ICCM_Abstract.pdf" target="_blank">abstract</a>)
 </p>
 
 <p>
-  Different structural boundaries have different effects on dependency resolution. Accepted as a poster at the Conference on Human Sentence Processing (HSP) 37, UMich, May 2024. (with Lalitha Balachandran, Pranav Anand, and Amanda Rysling)
+  Delayed structural prediction for relative clauses in Santiago Laxopa Zapotec, a language with robust resumptive pronouns. Talk at the Conference on Human Sentence Processing (HSP) 37, UMich, May 2024. (with Delaney Gomez-Jackson, Fe Silva Robles, Maziar Toosarvandani, and Matthew Wagers) (<a href="PDF/Duff_2024_HSP_Abstract.pdf" target="_blank">abstract</a>) (<a href="PDF/Duff_2024_HSP_Slides.pdf" target="_blank">slides</a>)
+</p>
+
+<p>
+  Different structural boundaries have different effects on dependency resolution. Poster at the Conference on Human Sentence Processing (HSP) 37, UMich, May 2024. (with Lalitha Balachandran, Pranav Anand, and Amanda Rysling) (<a href="PDF/Balachandran&al_2024_HSP_Abstract.pdf" target="_blank">abstract</a>) (<a href="PDF/Balachandran&al_2024_HSP_Poster.pdf" target="_blank">poster</a>)
 </p>
 
 <p>
@@ -184,6 +188,17 @@
 </p>
 
 <h4>Other Presentations</h4>
+
+<p>Semantic garden paths and the timing of comprehension decisions. Invited colloquium, Oxford University Faculty of Linguistics, Philology and Phonetics, May 2024. (<a href="PDF/Duff_2024_OxfordColloq.pdf" target="_blank">slides</a>)</p>
+
+<p>
+Various contributions to Guillem Belmar, Mykel Loren Brinkerhoff, Eric W. Campbell, and Maya Wax Cavallaro (orgs.) <em>Engaging the community: Using field methods classes for community outreach</em>, organized session at the Society for the Study of the Indigenous Languages of the Americas (SSILA) Annual Meeting, January 2023.</p>
+<ul>
+<li>Developing computer games in field methods classes: A tool for language teaching and revitalization. (Talk, with Giorgia Troiani, Jeremías Salazar, Andrew Hedding, Matthew Kogan, Natalia Gracida Cruz, Fe Silva-Robles, and Mykel Lorne Brinkerhoff) </li>
+<li>Implementing Game of Tones. (Tutorial, with Andrew Hedding, Matthew Kogan, and Mykel Lorne Brinkerhoff)</li>
+<li>Story books as outcomes from Field Methods classes: P’urhépecha, Sà'án Sàvǐ ñà Yukúnanǐ and Santiago Laxopa Zapotec. (Talk, with Jeremías Salazar, Martín Gabriel Ruiz, Eric W. Campbell, Guillem Belmar, Maya Wax Cavallaro, Raul Diaz Robles, Delaney Gomez-Jackson, Claire Miller Willahan, and Mykel Lorne Brinkerhoff)</li>
+</ul>
+
 
 <p>
 Deriving "restrictive" interpretations for clarificatory nominal appositives. Talk at California Universities Semantics & Pragmatics (CUSP) 13, UCLA, May 2022.
