--- a/pubs.html
+++ b/pubs.html
@@ -84,7 +84,11 @@
 <h4>Peer-Reviewed Presentations</h4>
 
 <p>
-  Modeling individual differences in a pragmatic reference game as a consequence of variable disengagement from unsuccessful strategies. Accepted as a talk in the “Computational Psycholinguistics” symposium at MathPsych/ICCM 2024, Tilburg. (with Alexandra Mayn and Vera Demberg) (<a href="PDF/DuffMaynDemberg_2024_ICCM_Abstract.pdf" target="_blank">abstract</a>)
+  Effects of foil processing, decision-making, and initial attention in the Maze task. Accepted as a poster at AMLaP 30, Edinburgh, September 2024. (with Pranav Anand and Amanda Rysling) (<a href="PDF/Duff_2024_AMLaP_Abstract.pdf" target="_blank">abstract</a>)
+</p>
+
+<p>
+  Modeling individual differences in a pragmatic reference game as a consequence of variable disengagement from unsuccessful strategies. Accepted as a talk in the “Computational Psycholinguistics” symposium at MathPsych/ICCM 2024, Tilburg, July 2024. (with Alexandra Mayn and Vera Demberg) (<a href="PDF/DuffMaynDemberg_2024_ICCM_Abstract.pdf" target="_blank">abstract</a>)
 </p>
 
 <p>
