Adding MathPsych slides and XPrag acceptances

--- a/pubs.html
+++ b/pubs.html
@@ -84,11 +84,19 @@
 <h4>Peer-Reviewed Presentations</h4>
 
 <p>
+  The role of reinforcement learning in pragmatic reasoning tasks: Modeling individual differences in ACT-R. Accepted as a talk at XPrag.it 5, Venice, September 2024. (with Alexandra Mayn, Nataliia Bila, and Vera Demberg) (<a href="PDF/DuffMaynDemberg_2024_XPrag_Abstract.pdf" target="_blank">abstract</a>)
+</p>
+
+<p>
+  Not as rational as RSA predicts: Failure to reason about alternative messages. Accepted as a poster at XPrag.it 5, Venice, September 2024. (with Alexandra Mayn, Nataliia Bila, and Vera Demberg) (<a href="PDF/MaynDuffBilaDemberg_2024_XPrag_Abstract.pdf" target="_blank">abstract</a>)
+</p>
+
+<p>
   Effects of foil processing, decision-making, and initial attention in the Maze task. Accepted as a poster at AMLaP 30, Edinburgh, September 2024. (with Pranav Anand and Amanda Rysling) (<a href="PDF/Duff_2024_AMLaP_Abstract.pdf" target="_blank">abstract</a>)
 </p>
 
 <p>
-  Modeling individual differences in a pragmatic reference game as a consequence of variable disengagement from unsuccessful strategies. Accepted as a talk in the “Computational Psycholinguistics” symposium at MathPsych/ICCM 2024, Tilburg, July 2024. (with Alexandra Mayn and Vera Demberg) (<a href="PDF/DuffMaynDemberg_2024_ICCM_Abstract.pdf" target="_blank">abstract</a>)
+  Modeling individual differences in a pragmatic reference game as a consequence of variable disengagement from unsuccessful strategies. Talk in the “Computational Psycholinguistics” symposium at MathPsych/ICCM 2024, Tilburg, July 2024. (with Alexandra Mayn and Vera Demberg) (<a href="PDF/DuffMaynDemberg_2024_MathPsych_Abstract.pdf" target="_blank">abstract</a>) (<a href="PDF/DuffMaynDemberg_2024_MathPsych_Slides.pdf" target="_blank">slides</a>)
 </p>
 
 <p>
