--- a/pubs.html
+++ b/pubs.html
@@ -92,7 +92,8 @@
 </p>
 
 <p>
-  Effects of foil processing, decision-making, and initial attention in the Maze task. Accepted as a poster at AMLaP 30, Edinburgh, September 2024. (with Pranav Anand and Amanda Rysling) (<a href="PDF/Duff_2024_AMLaP_Abstract.pdf" target="_blank">abstract</a>)
+  Effects of foil processing, decision-making, and initial attention in the Maze task. Poster at AMLaP 30, Edinburgh, September 2024. (with Pranav Anand and Amanda Rysling) (<a href="PDF/Duff_2024_AMLaP_Abstract.pdf" target="_blank">abstract</a>) (<a href="PDF/Duff_2024_AMLaP.pdf" target="_blank">poster</a>) (<a href="https://osf.io/7tckd/" target="_blank">repository</a>)
+</p>
 </p>
 
 <p>
