Update after XPrag

--- a/pubs.html
+++ b/pubs.html
@@ -84,11 +84,11 @@
 <h4>Peer-Reviewed Presentations</h4>
 
 <p>
-  The role of reinforcement learning in pragmatic reasoning tasks: Modeling individual differences in ACT-R. Accepted as a talk at XPrag.it 5, Venice, September 2024. (with Alexandra Mayn, Nataliia Bila, and Vera Demberg) (<a href="PDF/DuffMaynDemberg_2024_XPrag_Abstract.pdf" target="_blank">abstract</a>)
+  The role of reinforcement learning in pragmatic reasoning tasks: Modeling individual differences in ACT-R. Talk at XPrag.it 5, Venice, September 2024. (with Alexandra Mayn, Nataliia Bila, and Vera Demberg) (<a href="PDF/DuffMaynDemberg_2024_XPrag_Abstract.pdf" target="_blank">abstract</a>) (<a href="PDF/DuffMaynDemberg_2024_XPrag_Slides.pdf" target="_blank">slides</a>)
 </p>
 
 <p>
-  Not as rational as RSA predicts: Failure to reason about alternative messages. Accepted as a poster at XPrag.it 5, Venice, September 2024. (with Alexandra Mayn, Nataliia Bila, and Vera Demberg) (<a href="PDF/MaynDuffBilaDemberg_2024_XPrag_Abstract.pdf" target="_blank">abstract</a>)
+  Not as rational as RSA predicts: Failure to reason about alternative messages. Poster at XPrag.it 5, Venice, September 2024. (with Alexandra Mayn, Nataliia Bila, and Vera Demberg) (<a href="PDF/MaynDuffBilaDemberg_2024_XPrag_Abstract.pdf" target="_blank">abstract</a>)
 </p>
 
 <p>
