Landing page updates

--- a/index.html
+++ b/index.html
@@ -42,11 +42,13 @@
 
           <p> I'm a post-doctoral researcher in the <a href="https://www.uni-saarland.de/en/department/lst.html" target="_blank">Department of Language Science and Technology</a> at Saarland University, in Saarbrücken, Germany.
 
-          <p> My research interests lie in the nature and time-course of <b>semantic and pragmatic interpretation</b>, and the peculiarities of <b>narrative</b> and <b>conversation</b>. I study these topics as both a psycholinguist and a semanticist. I also work with speakers of <b>Santiago Laxopa Zapotec</b> on a variety of collaborative projects. </p>
+          <p> I'm a psycholinguist, interested in the <b>processing and representation of linguistic meaning</b> as a component of human cognition, with special reference to explaining <b>variation across individuals, tasks, and languages</b>. To this last point, I work with speakers of <b>Santiago Laxopa Zapotec</b> on a variety of collaborative projects.</p>
 
           <p> I'm working now with <a href="https://www.uni-saarland.de/lehrstuhl/demberg.html" target="_blank">Vera Demberg's group</a> on the ERC grant <a href="https://www.uni-saarland.de/lehrstuhl/demberg/individualized-interaction-in-discourse-iddisc.html" target="_blank">"Individualized Interaction in Discourse,"</a> focusing on developing computational models of cognition which can capture individual differences in real-time pragmatic processing.</p>
 
           <p> In December of 2023, I received my Ph.D. in Linguistics from UC Santa Cruz, co-advised by Pranav Anand and Amanda Rysling. My dissertation is on the timing and consequences of decision-making about various types of uncertain meaning (homonomy, polysemy, distributivity, implicit causal inferences, and scalar implicature) in incremental processing. <a href="PDF/Duff_2023_Dissertation.pdf" target="_blank">You can read it here.</a></p>
+
+          <p> <b>Signing up for the WS 2024 seminar on Cognitive Models of Human Language Understanding?</b> <br/> <a href="https://forms.office.com/e/SAur33r3gK" target="_blank">Fill out the form here.</a></p>
 
           <p> <b>Contact:</b> jduff@lst.uni-saarland.de <br> <b>Office:</b> C7.4 3.05</p>
 
@@ -55,7 +57,7 @@
       </section>
 
       <section class="footer">
-        Last updated: 28 September 2024
+        Last updated: 17 October 2024
       </section>
 
     </section>
