New research blurbs, AC/Rails

--- a/index.html
+++ b/index.html
@@ -48,16 +48,18 @@
 
           <p> In December of 2023, I received my Ph.D. in Linguistics from UC Santa Cruz, co-advised by Pranav Anand and Amanda Rysling. My dissertation is on the timing and consequences of decision-making about various types of uncertain meaning (homonomy, polysemy, distributivity, implicit causal inferences, and scalar implicature) in incremental processing. <a href="PDF/Duff_2023_Dissertation.pdf" target="_blank">You can read it here.</a></p>
 
-          <p> <b>Signing up for the WS 2024 seminar on Cognitive Models of Human Language Understanding?</b> <br/> <a href="https://forms.office.com/e/SAur33r3gK" target="_blank">Fill out the form here.</a></p>
+          <p> <b>Contact:</b> jduff@lst.uni-saarland.de <br> 
+            <b>Office:</b> C7.4 3.05 <br>
+            <b>Office hours, winter 2024/2025:</b> Tuesdays, 11-12 
 
-          <p> <b>Contact:</b> jduff@lst.uni-saarland.de <br> <b>Office:</b> C7.4 3.05</p>
+          </p>
 
         </div>
 
       </section>
 
       <section class="footer">
-        Last updated: 17 October 2024
+        Last updated: 18 November 2024
       </section>
 
     </section>
