--- a/pubs.html
+++ b/pubs.html
@@ -38,19 +38,19 @@
 <h3>Journal Articles</h3>
 
 <p>
-  <b>John Duff</b>, Pranav Anand, Adrian Brasoveanu, and Amanda Rysling. 2023. Pragmatic representations and online comprehension: Lessons from direct discourse and causal adjuncts. <em>Glossa Psycholinguistics</em> 2(1). (<a href="https://escholarship.org/uc/item/9p22k5j5" target="_blank">PDF</a>) 
+  <b>John Duff</b>, Pranav Anand, Adrian Brasoveanu, and Amanda Rysling. 2023. Pragmatic representations and online comprehension: Lessons from direct discourse and causal adjuncts. <em>Glossa Psycholinguistics</em> 2(1). DOI: <a href="https://doi.org/10.5070/G6011198" target="_blank">10.5070/G6011198</a> (Open access)
 </p>
 
 <p>
-  Fe Silva-Robles, Felipe H. Lopez, <b>John Duff</b>, and Carolyn Jane Anderson. 2022. Eliciting associated motion constructions in two Zapotec languages. <em>Semantic Field Methods</em> 4(3): 1-51. (<a href="https://ojs.library.ubc.ca/index.php/storyboards/article/view/195508" target="_blank">PDF</a>) 
+  Fe Silva-Robles, Felipe H. Lopez, <b>John Duff</b>, and Carolyn Jane Anderson. 2022. Eliciting associated motion constructions in two Zapotec languages. <em>Semantic Field Methods</em> 4(3): 1-51. (<a href="https://ojs.library.ubc.ca/index.php/storyboards/article/view/195508" target="_blank">Link</a>) (Open access)
 </p>
 
 <p>
-  Lyn Frazier and <b>John Duff</b>. 2019. Processing ellipsis: The circumstances of repair. <em>Glossa</em> 4(1): 78. DOI: <a href="http://doi.org/10.5334/gjgl.728" target="_blank">http://doi.org/10.5334/gjgl.728</a>.
+  Lyn Frazier and <b>John Duff</b>. 2019. Processing ellipsis: The circumstances of repair. <em>Glossa</em> 4(1): 78. DOI: <a href="http://doi.org/10.5334/gjgl.728" target="_blank">10.5334/gjgl.728</a>. (Open access)
 </p>
 
 <p>
-  Lyn Frazier, Charles Clifton Jr., Stephanie Rich, and <b>John Duff</b>. 2018. Anticipating negation: The dos and don’ts of Neg Raising. <em>Syntax</em> 21(2): 160-194. DOI: <a href="https://doi.org/10.1111/synt.12151" target="_blank">https://doi.org/10.1111/synt.12151</a>.
+  Lyn Frazier, Charles Clifton Jr., Stephanie Rich, and <b>John Duff</b>. 2018. Anticipating negation: The dos and don’ts of Neg Raising. <em>Syntax</em> 21(2): 160-194. DOI: <a href="https://doi.org/10.1111/synt.12151" target="_blank">10.1111/synt.12151</a>.
 </p>
 
 <p>
@@ -60,11 +60,11 @@
 <h3>Proceedings Papers & Working Papers</h3>
 
 <p>
-  <b>John Duff</b>, Ivy Sichel, and Maziar Toosarvandani. 2022. Redundancy and restriction in the derivation of relative clauses. In Lalitha Balachandran & John Duff (eds.), <em>Syntax & Semantics at Santa Cruz</em> Vol. 5. (<a href="https://escholarship.org/uc/item/2s3545j1#page=42" target="_blank">PDF</a>)
+  <b>John Duff</b>, Ivy Sichel, and Maziar Toosarvandani. 2022. Redundancy and restriction in the derivation of relative clauses. In Lalitha Balachandran & John Duff (eds.), <em>Syntax & Semantics at Santa Cruz</em> Vol. 5. (<a href="https://escholarship.org/uc/item/2s3545j1#page=42" target="_blank">Link</a>) (Open access)
 </p>
 
 <p>
-  <b>John Duff</b> and Lalitha Balachandran. 2022. Participants seek shared outlooks in non-canonical disagreements: Evidence from a corpus of dyadic conversation in English. In <em>Proceedings of SemDial 26 (DubDial)</em>. (<a href="PDF/Duff&Balachandran_2022_SemDialproc.pdf" target="_blank">PDF<a>)
+  <b>John Duff</b> and Lalitha Balachandran. 2022. Participants seek shared outlooks in non-canonical disagreements: Evidence from a corpus of dyadic conversation in English. In <em>Proceedings of SemDial 26 (DubDial)</em>. (<a href="https://www.semdial.org/anthology/papers/Z/Z22/Z22-3008/" target="_blank">Link<a>) (Open access)
 </p>
 
 <p>
@@ -72,7 +72,7 @@
 </p>
 
 <p>
-  <b>John Duff</b>. Forthcoming. A causal decomposition for associated motion events in Santiago Laxopa Zapotec. In <em>Proceedings of WCCFL 39</em>. (<a href="PDF/Duff_2021_WCCFLproc.pdf" target="_blank">Pre-print, 15 June 2021<a>)
+  <b>John Duff</b>. 2021. A causal decomposition for associated motion events in Santiago Laxopa Zapotec. In Robert Autry et al. (eds.), <em>Proceedings of WCCFL 39</em>. (<a href="https://lingref.com/cpp/wccfl/39/abstract3625.html" target="_blank">Link<a>) (Open access)
 </p>
 
 <p>
@@ -82,6 +82,18 @@
 <h3>Presentations and Posters</h3>
 
 <h4>Peer-Reviewed Presentations</h4>
+
+<p>
+  Cross-linguistic variation in structural prediction as learned behavior. Accepted as a talk at Rational Approaches in Language Science (RAILS) 2, February 2025, Saarland University. (with Delaney Gomez-Jackson, Fe Silva Robles, Maziar Toosarvandani, and Matthew Wagers)
+</p>
+
+<p>
+  Listeners adapt to speakers’ pragmatic competence. Accepted as a poster at Rational Approaches in Language Science (RAILS) 2, February 2025, Saarland University. (with Kata Naszadi, Alexandra Mayn, and Vera Demberg)
+</p>  
+
+<p>
+  Reanalysis in discourse comprehension: Evidence from reading times. Accepted as a poster at the Amsterdam Colloquium, December 2024. (with Daniel Altshuler) 
+</p>
 
 <p>
   The role of reinforcement learning in pragmatic reasoning tasks: Modeling individual differences in ACT-R. Talk at XPrag.it 5, Venice, September 2024. (with Alexandra Mayn and Vera Demberg) (<a href="PDF/DuffMaynDemberg_2024_XPrag_Abstract.pdf" target="_blank">abstract</a>) (<a href="PDF/DuffMaynDemberg_2024_XPrag_Slides.pdf" target="_blank">slides</a>)
