--- a/research.html
+++ b/research.html
@@ -39,81 +39,95 @@
         Research
       </h2>
 
-      <p><em>This page is in need of an update, but feel free to read below for a snapshot of my research from December 2022.</em></p>
-
       <p>
-        One way to divide up my research is by the kind of methods I use: e.g. several of my projects use judgments or reading measures collected in experiments, several others come from a long-term commitment to semantic fieldwork on the Oto-Manguean language <a href="https://zapotec.ucsc.edu/" target="_blank">Santiago Laxopa Zapotec (Dille’ xhunh Laxup)</a>.
+        One way to divide up my research is by the kind of methods I use: e.g. several of my projects use responses or reading measures collected in experiments, several others come from a long-term commitment to semantic fieldwork on the Oto-Manguean language <a href="https://zapotec.ucsc.edu/" target="_blank">Santiago Laxopa Zapotec (Dille’ xhunh Laxup)</a>, and some newer projects involve computational cognitive modeling in ACT-R.
       </p>
 
       <p>
-        Spanning these methods, though, my research addresses the four key interests below.
+        Spanning these methods, though, my research is largely aimed at the three goals below.
       </p>
 
-      <h3>Events and relationships between them</h3>
+      <h3>Explaining variation in sentence comprehension procedures through skill learning</h3>
+
+      <p>
+        The best-known patterns of behavior in sentence processing are strong and wide-spread enough to emerge reliably in experimental data.
+        But when we look for variability, we can find it: <b>across tasks</b>, <b>across languages</b>, and <b>across individuals</b>.
+        I'm interested in explaining this variability, and to do so, I have found it useful to consider how an individual's preferred sentence processing procedures may emerge as learned skills, attempts to achieve their goals with minimal difficulty, given their experience.
+      </p>
+
+      <p>
+        In my dissertation, I consider how this might help us explain variation in the <b>timing of decisions about meaning</b> across different constructions (e.g. homonymy vs. polysemy) and in different tasks (self-paced reading vs. the Maze task).
+        Unlike static categorizations about what is resolved incrementally and what is delayed, a view of decision-timing as a flexible skill based on the utility and risk of early decisions allows us to explain a wider array of observed behaviors.
+        I have also used this approach to explain cross-linguistic variation, in particular a striking finding that comprehenders of Santiago Laxopa Zapotec <b>avoid early robust predictions for gap locations in relative clauses</b>.
+        On a a skill learning approach, this may be because the language's structure allows for well-performing parsing procedures without gap predictions.
+      </p>
+
+      <p>
+        If comprehension behaviors emerge from learning, we might also expect that some variation between individual comprehenders in experiments comes individual differences in learning behavior.
+        This is the focus of my first projects at Saarland, where we are investigating potential sources for <b>individual differences in pragmatic inferencing in shape-based "reference games"</b>.
+        Computational simulations of realistic human performance in 
+        ACT-R have given us a proof-of-concept that differences in strategy could emerge from variation in learning parameters, a hypothesis we have validated in subsequent experimental work.
+        I see ACT-R models of strategy selection as a valuable tool for further theoretical refinement across this area of my work.
+      </p>
 
         <p>
-          Through fieldwork on Santiago Laxopa Zapotec, I have become interested in <b>associated motion</b>, a family of verbal constructions that combine lexical verb meaning with an extra event of motion. The fine-grained semantics of these constructions raise several questions for our theories of events in language, touching on topics like causality, participant intention, and modification at the syntax-semantics interface.
+          For instance, see:
+          <ul>
+            <li> The <a href="PDF/Duff_2023_Dissertation.pdf#page=32" target="_blank">second chapter of my dissertation</a>, on task effects in the timing of decisions about polysemy and distributivity.</li>
+            <li>The abstract from a <a href="PDF/Duff_2024_HSP_Abstract.pdf" target="_blank"> 2024 plenary talk at the the Conference on Human Sentence Processing (HSP)</a> on processing of relative clauses in Santiago Laxopa Zapotec, with Delaney Gomez-Jackson, Fe Silva Robles, Maziar Toosarvandani, and Matt Wagers. (paper in preparation)</li>
+            <li>The abstract from a <a href="PDF/DuffMaynDemberg_2024_XPrag_Abstract.pdf" target="_blank">2024 talk at XPrag.it</a> about our ACT-R model of strategy selection in pragmatic reference games, with Alexandra Mayn and Vera Demberg. (paper in preparation)</li>
+          </ul>
         </p>
+
+      <h3>Accounting for rich linguistic meaning in sentence processing</h3>
+
+      <p>
+        We know that humans comprehend sentences incrementally, but we often are missing details in our theories when it comes to the rich details of linguistic meaning. I'm generally very interested in helping fill in these details.
+      </p>
+
+      <p>
+        In many cases, these interests regard the <b>timecourse of firm interpretation for pragmatic enrichments</b> like scalar implicature or discourse coherence.
+        Across several experiments in the latter half of my dissertation, I observed readers demonstrating no costly reanalysis for these aspects of meaning, even in cases where their incremental expectations reflect an awareness of the potential enrichments.
+        These patterns may be consistent with widespread and long-term maintenance of several ranked analyses at the level of discourse interpretation.
+        Further follow-ups here in collaboration with Daniel Altshuler and Kelsey Sasaki suggest that firm commitments and costly reanalysis can nevertheless be observed when contexts are exceptionally biased, highlighting the need for representations and processing theories compatible with variably specified interpretations.
+      </p>
+
+      <p>
+        In other work, my collaborators and I have followed up on the proposal that the representational boundaries supposed in formal pragmatics may drive the <b>packaging of linguistic content in memory</b>, fueling a set of puzzling processing behaviors for peripheral content like appositive relative clauses.
+        Parts of this research have tried to clarify exactly which pragmatic boundaries would have to be responsible, by expanding the set of natural language constructions we look at for these phenomena.
+        Other parts of this research, in close collaboration with Lalitha Balachandran, have tried to clarify which memory mechanisms could explain the observed effects, when we do see them.
+      </p>
+
+      <p>
+          For instance, see:
+          <ul>
+            <li>Chapters of my dissertation on the timing of decisions about <a href="PDF/Duff_2023_Dissertation.pdf#page=98" target="_blank">scalar implicature</a> and <a href="PDF/Duff_2023_Dissertation.pdf#page=176" target="_blank">inferences from discourse coherence</a> in self-paced reading and the Maze task.</li>
+            <li>A <a href="https://escholarship.org/uc/item/9p22k5j5" target="_blank">2023 article in <em>Glossa Psycholinguistics</em></a> on the puzzle of appositive processing, compared to the (core-content-like) processing of direct discourse quotations and causal adjuncts, with Pranav Anand, Adrian Brasoveanu, and Amanda Rysling.</li>
+            <li>Posters at <a href="PDF/Balachandran&al_2022_AMLaP_Poster.pdf" target="_blank">AMLaP 2022</a> and <a href="PDF/Balachandran&al_2024_HSP_Poster.pdf" target="_blank">HSP 2024</a> using verb phrase ellipsis as a test probe for a finer-grained understanding of how pragmatic or prosodic structure might group linguistic material in memory, with co-first-author Lalitha Balachandran, Pranav Anand and Amanda Rysling.</li>
+
+          </ul>
+        </p>
+
+      <h3>Relating cognition and communication with theories of linguistic meaning</h3>
+
+        <p>
+          Through fieldwork on Santiago Laxopa Zapotec, I have become interested in <b>associated motion</b>, a family of verbal constructions that combine lexical verb meaning with an extra event of purposive motion. 
+          The fine-grained semantics of these constructions suggest that participant intention plays an important role in the unitization of events in natural language, much as it does elsewhere in event cognition.
+        </p>
+
       	<p>
-      	  This work has spurred a broader interest in causal connections between events, which has led me to ongoing formal and experimental work on implicit causal inferences. I’m very interested in the limits and biases in our comprehension of the relationships between events in language, and how they relate to limits and biases which hold more generally in event cognition. There are important open questions here about how to divide explanatory burden between general cognition, theories of linguistic performance, and theories of grammar.
+      	  How best to <b>divide explanatory burdens between general cognition and theories of linguistic representation</b> is a recurring theme in other projects at the semantics-pragmatics interface, including explaining constraints against redundancy inside the Santiago Laxopa Zapotec noun phrase (where the burden seems to be borne by the grammar), and explaining pressures for stance alignment in natural subjective conversation (where the burden seems to be borne by the social goals of communication).
       	</p>
 
         <p>
           For instance, see:
           <ul>
-            <li>A <a href="PDF/Duff_2021_WCCFLproc.pdf" target="_blank">forthcoming WCCFL proceedings paper</a> on associated motion and the connection between event complexity and intentional event participants.</li>
+            <li>A <a href="https://lingref.com/cpp/wccfl/39/abstract3625.html" target="_blank">2021 WCCFL proceedings paper</a> on associated motion and the connection between event complexity and intentional event participants.</li>
             <li>A <a href="PDF/Duff_2021_WSCLAproc.pdf" target="_blank">forthcoming WSCLA proceedings paper</a> on the event and argument structure of associated motion at the syntax/semantics interface.</li>
+            <li>A <a href="PDF/DuffSichelToosarvandani_2022_SASC.pdf" target="_blank">2022 UC Santa Cruz working paper</a> on redundancy constraints between relative clauses and demonstrative adjectives in Santiago Laxopa Zapotec, with Ivy Sichel and Maziar Toosarvandani.</li>
+            <li>A <a href="https://www.semdial.org/anthology/papers/Z/Z22/Z22-3008/" target="_blank">2022 SemDial proceedings paper</a> on the trajectories of disagreements in a corpus of subjective conversation.</li>
           </ul>
         </p>
-
-        <h3>Peripheral content in theory and online comprehension</h3>
-
-        <p>
-          I study closely-related topics at the border of grammar and performance in a variety of work on chunks of language which are somehow loosely connected to the rest of a sentence: constructions like <b>appositives</b> (and other supplements), and <b>quotation</b>. Some of this work probes the syntax and semantics of edge cases, including appositives in Santiago Laxopa Zapotec and American English that don’t fit our usual typology of supplements. Other work looks at how loosely-connected constituents are and are not distinguished from core content during online comprehension, in service of questions about the kinds of linguistic representations that online processing is sensitive to.
-        </p>
-
-        <p>
-          For instance, see:
-          <ul>
-            <li>A <a href="https://escholarship.org/uc/item/9p22k5j5" target="_blank">2023 article in <em>Glossa Psycholinguistics</em></a> on the puzzle of appositive processing, compared to the (core-content-like) processing of direct discourse quotations and causal adjuncts, with Pranav Anand, Adrian Brasoveanu, and Amanda Rysling.</li>
-            <li>A <a href="PDF/DuffSichelToosarvandani_2022_SASC.pdf" target="_blank">2022 paper in <em>Syntax & Semantics at Santa Cruz</em></a> on the syntax and semantics of relative clauses and nominal appositives in Santiago Laxopa Zapotec, with Ivy Sichel and Maziar Toosarvandani.</li>
-            <li>A <a href="PDF/Duff_2022_HSP.pdf" target="_blank">2022 short talk at the Conference on Human Sentence Processing (HSP)</a> on agreement attraction effects from lingering misinterpretation of pure quotation, with Matt Wagers.</li>
-          </ul>
-        </p>
-            
-      <h3>The timecourse of semantic commitment</h3>
-
-        <p>
-          We know that humans comprehend sentences incrementally, but we lack fine-grained theories of how and when each piece of the meaning puzzle becomes a firm commitment. I am working on these questions from a few different angles, investigating the processing of semantic ambiguities and implicit inferences using the <b>Maze task</b> and more traditional reading measures. The first stages of this work has revealed flexibility in the exact timeline of interpretation. Depending on the ambiguity and concurrent task demands, comprehenders can delay their commitment to certain meaning or choose to commit to a predictable meaning as soon as they encounter the relevant content. The latter seems to be a norm in the Maze.
-        </p>
-
-        <p>
-          For instance, see:
-          <ul>
-            <li>A <a href="PDF/Duff_2021_CUNY.pdf" target="_blank">2021 short talk at the CUNY Conference on Human Sentence Processing</a> on task-motivated early commitment for polysemous nouns in the Maze task, with Adrian Brasoveanu and Amanda Rysling.</li>
-            <li>A <a href="PDF/Duff_2022_ELM.pdf" target="_blank">2022 short talk at Experiments in Linguistic Meaning (ELM)</a> on task-motivated early commitment to full collective interpretations for verbs with plural subjects in the Maze task, with Adrian Brasoveanu and Amanda Rysling.</li>
-          </ul>
-        </p>
-
-      <h3>Sentient individuals in language</h3>
-
-        <p>
-          At another point where general cognition, psycholinguistics, and grammar overlap, I have a standing interest in phenomena where interpretation or online comprehension patterns are conditioned on the animacy or sentience of an entity. One place where this shows up is in a variety of collaborations at UCSC on sentience in grammar and parsing. For instance, in one current project, we’ve shown that animacy effects in structural prediction for long-distance dependencies can be triggered by inanimate objects that are afforded animate qualities in context. Future planned work in this vein include additional work on animacy and prediction in English, and grammatical vs. conceptual animacy effects on long-distance dependencies and resumption in the rich animacy hierarchy of Santiago Laxopa Zapotec.
-        </p>
-
-        <p>
-          Elsewhere, I investigate the sometimes-implicit connections between linguistic meaning and sentient individuals, in particular perspectival phenomena like predicates of personal taste (PPTs). In some recent work, I have shown experimentally that the typical interpretation of PPTs as expressing the judgments of a speaker is more varied than previously discussed, and argued that speaker-dependence is best understood as mediated through a theory of the formal pragmatics of conversation. In similar work that made up my BA thesis at UMass Amherst, I showed that comprehenders exploit a number of cues to interpret perspectival shifts.
-        </p>
-
-        <p>
-          For instance, see:
-          <ul>
-            <li>A <a href="PDF/Rich_2022_HSP.pdf" target="_blank">2022 short talk at the Conference on Human Sentence Processing (HSP)</a> on parsing effects from contextually-animate inanimate nouns, with Stephanie Rich (first author), Lalitha Balachandran, Matthew Kogan, Nick Van Handel, Maya Wax Cavallaro, and Matt Wagers.</li>
-            <li>A <a href="PDF/Duff_2019_CUSP.pdf" target="_blank">2019 talk at the California Universities Semantics and Pragmatics conference (CUSP)</a> on the sensitivity of PPTs to discourse status in questions and definites.</li>
-            <li>A <a href="PDF/Duff_2018_CAMP.pdf" target="_blank">2018 talk at the California Meeting on Psycholinguistics (CAMP)</a> on individual differences in the use of linguistic cues to perspective shifts.</li>
-          </ul>
-        </p>
-
 
       </section>
 
