Add AC proceedings

--- a/pubs.html
+++ b/pubs.html
@@ -60,6 +60,10 @@
 <h3>Proceedings Papers & Working Papers</h3>
 
 <p>
+  <b>John Duff</b> and Daniel Altshuler. 2024. Reanalysis in discourse comprehension: Evidence from reading times. In Fausto Carcassi et al. (eds.), <em>Proceedings of the 24th Amsterdam Colloquium</em>: 102-110. (<a href="PDF/Duff&Altshuler_2024_ReanalysisInDiscourseComprehension_ACProceedings.pdf" target="_blank">PDF<a>)
+</p>
+
+<p>
   <b>John Duff</b>, Ivy Sichel, and Maziar Toosarvandani. 2022. Redundancy and restriction in the derivation of relative clauses. In Lalitha Balachandran & John Duff (eds.), <em>Syntax & Semantics at Santa Cruz</em> Vol. 5. (<a href="https://escholarship.org/uc/item/2s3545j1#page=42" target="_blank">Link</a>) (Open access)
 </p>
 
@@ -92,7 +96,7 @@
 </p>  
 
 <p>
-  Reanalysis in discourse comprehension: Evidence from reading times. Accepted as a poster at the Amsterdam Colloquium, December 2024. (with Daniel Altshuler) 
+  Reanalysis in discourse comprehension: Evidence from reading times. Poster at the 24th Amsterdam Colloquium, December 2024. (with Daniel Altshuler) 
 </p>
 
 <p>
