--- a/index.html
+++ b/index.html
@@ -40,17 +40,16 @@
 
         <div class="details">
 
-          <p> I'm a post-doctoral researcher in the <a href="https://www.uni-saarland.de/en/department/lst.html" target="_blank">Department of Language Science and Technology</a> at Saarland University, in Saarbrücken, Germany.
+          <p> I'm an incoming assistant professor in the <a href="https://linguistics.ucla.edu/" target="_blank">Department of Linguistics</a> at UCLA, starting Fall 2025.
 
           <p> I'm a psycholinguist, interested in the <b>processing and representation of linguistic meaning</b> as a component of human cognition, with special reference to explaining <b>variation across individuals, tasks, and languages</b>. To this last point, I work with speakers of <b>Santiago Laxopa Zapotec</b> on a variety of collaborative projects.</p>
 
-          <p> I'm working now with <a href="https://www.uni-saarland.de/lehrstuhl/demberg.html" target="_blank">Vera Demberg's group</a> on the ERC grant <a href="https://www.uni-saarland.de/lehrstuhl/demberg/individualized-interaction-in-discourse-iddisc.html" target="_blank">"Individualized Interaction in Discourse,"</a> focusing on developing computational models of cognition which can capture individual differences in real-time pragmatic processing.</p>
+          <p> In Summer 2025, I am wrapping up my projects as a post-doctoral researcher in the <a href="https://www.uni-saarland.de/en/department/lst.html" target="_blank">Department of Language Science and Technology</a> at Saarland University, in Saarbrücken, Germany. While at Saarland, I have worked with <a href="https://www.uni-saarland.de/lehrstuhl/demberg.html" target="_blank">Vera Demberg's group</a> on the ERC grant <a href="https://www.uni-saarland.de/lehrstuhl/demberg/individualized-interaction-in-discourse-iddisc.html" target="_blank">"Individualized Interaction in Discourse,"</a> focusing on developing computational models of cognition which can capture individual differences in real-time pragmatic processing.</p>
 
           <p> In December of 2023, I received my Ph.D. in Linguistics from UC Santa Cruz, co-advised by Pranav Anand and Amanda Rysling. My dissertation is on the timing and consequences of decision-making about various types of uncertain meaning (homonomy, polysemy, distributivity, implicit causal inferences, and scalar implicature) in incremental processing. <a href="PDF/Duff_2023_Dissertation.pdf" target="_blank">You can read it here.</a></p>
 
           <p> <b>Contact:</b> jduff@lst.uni-saarland.de <br> 
             <b>Office:</b> C7.4 3.05 <br>
-            <b>Office hours, winter 2024/2025:</b> Tuesdays, 11-12 
 
           </p>
 
@@ -59,7 +58,7 @@
       </section>
 
       <section class="footer">
-        Last updated: 18 November 2024
+        Last updated: 9 June 2025
       </section>
 
     </section>
